--- a/kaarel_kivisalu.tex
+++ b/kaarel_kivisalu.tex
@@ -5,7 +5,7 @@
 \addbibresource{viited_kaarel_kivisalu.bib}% Viidete info fail
 \defbibheading{bibliography}{\addchap{#1}}% Lisame kasutatud materjalid sisukorda
 
-\pealkiri{Gravitatsiooni mõju osakesete soojusmahtuvusele erinevates potentsiaalides}
+\pealkiri{Gravitatsiooni mõju osakeste süsteemi soojusmahtuvusele erinevates potentsiaalides}
 \autor{Kaarel Kivisalu}
 \klass{11. a}
 \juhendaja{prof Jaan Kalda \\ õp Toomas Reimann}
@@ -41,22 +41,24 @@ Hiljuti leiti Palma ja Sormani poolt, et efekt on hoopis vastupidine ja algne la
 Samasugune tulemus saadi kasutades statistilist mehaanikat ja klassikalist termodünaamikat.
 Mõlemad lahendused seovad omavahel soojusmahtuvuse ja lineaarse soojuspaisumisteguri.
 
-Käesolevas uurimistöös vaadatakse sarnast süsteemi
-Käesolevas töös uuritakse konkreetsete potentsiaalide korral konstantse gravitatsioonvälja mõju kerale sarnase, kuid lihtsustatud, süsteemi soojusmahtuvusele.
-Täpsemalt vaatatakse ühes dimensioonis
+Käesolevas töös uuritakse konkreetsete potentsiaalide korral konstantse gravitatsioonvälja mõju kerale sarnasele, kuid lihtsustatud, süsteemi soojusmahtuvusele.
+Täpsemalt vaatatakse süsteemi, kus kõik osakesed peale ühe on fikseeritud ja see osake saab liikuda ainult ühes dimensioonis.
 Konstantse gravitatsioonivälja potentsiaal on lineaarne ja see selle saab liita süsteemi potentsiaalile.
-Vaadatakse soojusmahtuvuse erinevust juhtudel, kui on ainult süsteemi potentsiaal ja kera potentsiaalile on lisatud lineaarne gravitatsioonivälja potentsiaal.
-Käesolevas töös üritatakse siduda soojusmahtuvust ja süsteemi mikroparameetreid.
+Käesolevas töös tahetakse leida seas süsteemi potentsiaali ja soojusmahtuvuse vahel.
 
-Töös on analüüsitud kuuppolünoompotentsiaali häirituse meetodil ja tükiti lineaarsestest funktsioonist koosnevat potentsiaali kvaasi-klassikaliselt.
+Töös analüüsitakse kuuphäiritusega harmoonilise ostsillaatori potentsiaali häirituse meetodil ja tükati sirgetest koosnevat potentsiaali kvaasi-klassikaliselt.
+
 
 %Varem on uuritud gravitatsiooni mõju metallkera soojusmahtuvusele Palma ja Sormani poolt \parencite{palma15}.
 %Leiti üldine seos soojusmahtuvuse, temperatuuri, gravitatsioonivälja tugevuse ja lineaarse soojuspaisumisteguri vahel.
 %Saadud tulemust on eksperimentaalselt väga raske kinnitada, kuna gravitatsiooni mõju on väga väike.
 %Konkreetsete potentsiaalide läbivaatamine tõstaks ka varem leitud mudeli usaldusväärsust.
 
-Töö hüpoteesiks on, et sõltuvalt valitud potentsiaalist võib gravitatsioonväli nii tõsta kui ka langetada keha soojusmahtuvust. Varem tehtud uurimistöös Palma ja Sormani poolt leiti, et \parencite{palma15}.
+Töö hüpoteesiks on, et sõltuvalt valitud potentsiaalist võib gravitatsioonväli nii tõsta kui ka langetada keha soojusmahtuvust.
+
+
 \addchap{Tähiste loetelu}
+
 \chapter{Ülevaade kirjandusest ja teooriast}
 
 %Siin peatükis on välja toodud olümpiaadiülesande algne lahendus ja põhjendatud, miks see rikub termodünaamika II seadust (osad \ref{algne} ja \ref{rikub}).
@@ -65,15 +67,15 @@ Töö hüpoteesiks on, et sõltuvalt valitud potentsiaalist võib gravitatsioonv
 
 Algne lahendus põhineb soojuspaisumisega seotud erinevustel. Kerale $A$ soojust andes see paisub ja selle massikese tõuseb. Järelikult peab osa kerale A antavast soojushulgast kuluma kera massikeskme gravitatsioonilise potentsiaalse energia tõstmiseks ja lõpptemperatuur on madalam algsest. Vastupidiselt, kera $B$ massikese langeb soojuspaisumise tõttu ja energiat saadakse juurde, järelikult on kera $B$ lõpptemperatuur kõrgem. \parencite[6-7]{ipho67}
 
-Pannakse ka kirja tavapärasele lahendusele vastavad valemid. Olgu kerade soojusmahtuvus $C_0$ gravitatsioonivälja puudumisel. Tavapärase lahenduse korrale, kui kera A soojendatakse, siis selle massikese tõused $dR=\alpha R \, dT$ võrra, kus $dT$ on temperatuuri tõus, $\alpha$ on soojuspaisumistegur ja $R$ on kera raadius. Kera saab potentsiaalse energia $d\Phi = mg \, dR$, kus $m$ on keha mass ja $g$ on raskuskiirendus. Järelikult, kui soojushulk \(\delta Q\) antakse süsteemile, siis saadakse, et \parencite[2-3]{palma15}
+Pannakse ka kirja tavapärasele lahendusele vastavad valemid. Olgu kerade soojusmahtuvus $C_0$ gravitatsioonivälja puudumisel. Tavapärase lahenduse korrale, kui kera A soojendatakse, siis selle massikese tõuseb $dR=\alpha R \, dT$ võrra, kus $dT$ on temperatuuri tõus, $\alpha$ on soojuspaisumistegur ja $R$ on kera raadius. Kera saab potentsiaalse energia $d\Phi = mg \, dR$, kus $m$ on keha mass ja $g$ on raskuskiirendus. Järelikult, kui soojushulk \(\delta Q\) antakse süsteemile, siis saadakse, et \parencite[2-3]{palma15}
 \begin{equation}
     \delta Q = C_0 \, dT + mg \, dR = C_0 \, dT + mg\alpha R \, dT = (C_0 +  mg\alpha R) dT.
 \end{equation}
-See on ekvivalentne väitega, et kera \(A\) soojusmahtuvus on:
+See on ekvivalentne väitega, et kera \(A\) soojusmahtuvus
 \begin{equation}
     C_A = C_0 + mg\alpha R.
 \end{equation}
-Analgoselt saame, et kera \(B\) soojusmahtuvus on
+Analgoselt saadakse, et kera \(B\) soojusmahtuvus
 \begin{equation}
     C_B = C_0 - mg\alpha R.
 \end{equation}
@@ -81,11 +83,11 @@ Enamiku materjalide jaoks on \(\alpha > 0\), millest tulenevalt \(C_A>C_B\). Jä
 
 \section{Algne lahendus rikub termodünaamika II seadust} \label{rikub}
 
-Tavapärases lahenduses kaudselt eeldatakse, et keha siseenergia \(U\) ja raadius \(R\) sõltuvad ainult temperatuurist \(T\), mitte aga raskuskiirendusest \(g\). Vaadeltakse järgnevat tsüklit: pall asub horisontaalsel külmal tasandil temperatuuriga \(T_1\); pall ühendatakse soojema reservuaariga, mille temperatuur \(T_2=T_1+dT>T_1\); pall riputatakse nööri külge ja horisontaalne tasand eemaldatakse; pall ühendatakse külma reservuaariga, mille temperatuur on \(T_1\). Selle protsessi kasutegur on tehtud töö ja neeldunud soojuse suhe ning avaldub kujul \parencite[3-5]{palma15}
+Tavapärases lahenduses kaudselt eeldatakse, et keha siseenergia \(U\) ja raadius \(R\) sõltuvad ainult temperatuurist \(T\), mitte aga raskuskiirendusest \(g\). Vaadeldakse järgnevat tsüklit: pall asub horisontaalsel külmal tasandil temperatuuriga \(T_1\); pall ühendatakse soojema reservuaariga, mille temperatuur \(T_2=T_1+dT>T_1\); pall riputatakse nööri külge ja horisontaalne tasand eemaldatakse; pall ühendatakse külma reservuaariga, mille temperatuur on \(T_1\). Selle protsessi kasutegur on tehtud töö ja neeldunud soojuse suhe ning avaldub kujul \parencite[3-5]{palma15}
 \begin{equation}
     \eta = \frac{2mg\alpha R}{C_0+mg\alpha R}.
 \end{equation}
-Kasutegur \(\eta\) ei sõltu \(dT\) suurusest. Termodünaamika teist seadus saab sõastada järgnevalt: iga tsükkel, mis töötab ainult temperatuuride \(T_1\) ja \(T_2\) juures ei saa olla efektiivsem Carnot' tsüklist, mis töötab samade temperatuuride juures. Carnot' tsükli efektiivsus on \parencite[3-5]{palma15}
+Kasutegur \(\eta\) ei sõltu \(dT\) suurusest. Termodünaamika teist seadust saab sõnastada järgnevalt: iga tsükkel, mis töötab ainult temperatuuride \(T_1\) ja \(T_2\) juures ei saa olla efektiivsem Carnot' tsüklist, mis töötab samade temperatuuride juures. Carnot' tsükli efektiivsus on \parencite[3-5]{palma15}
 \begin{equation}
     \eta_{Carnot'} = \frac{dT}{T_2}
 \end{equation}
@@ -110,6 +112,7 @@ Järelikult, kui \(dT\) on piisavalt väike, siis on palliga tsükli kasutegur s
 %\end{equation}
 
 \section{Statistiline mehaanika}
+
 Kvantmehaanilises statistilises mehaanikas on mugav kasutada tihedusmaatriksit (ingl \textit{density matrix}) $\op{\rho}$ kvantmehaanilise operaatori ooteväärtuse (ingl \textit{expectation value}) leidmiseks.
 Tihedusmaatriks on defineeritud järgnevalt \parencite[172]{kardar07}:
 \begin{equation}
@@ -144,7 +147,7 @@ Kasutades võrrandeid \eqref{ootev}, \eqref{tihm} ja \eqref{part} saadakse hamil
     \overline{\braket{\op{H}}}=\tr(\op{\rho}\op{H})=\frac{\tr{\op{H}e^{-\beta \op{H}}}}{Z}= -\frac{\partial \ln Z}{\partial \beta}.
     \label{keskham}
 \end{equation}
-Hamiltoniaani keskmist ooteväärtust võib mõista kui süsteemi energait. Kuna ollakse huvitatud temperatuuri muutusel kui süsteemile antakse mingi enerigiahulk, siis on kasulik defineerida soojusmahtuvus kui
+Hamiltoniaani keskmist ooteväärtust võib mõista kui süsteemi energiat. Kuna ollakse huvitatud temperatuuri muutusest kui süsteemile antakse mingi enerigiahulk, siis on kasulik defineerida soojusmahtuvus kui
 \begin{equation}
     C = \frac{\partial \overline{\braket{\op{H}}}}{\partial T}.
     \label{soojuham}
@@ -159,7 +162,7 @@ Kasutades selles osas saadud seoseid on võimalik leida kera soojusmahtuvuse sõ
 \begin{equation} \label{palmasor}
     \frac{\partial C(g,T)}{\partial g} = -mTY \left( \alpha^2 + \frac{\partial \alpha}{\partial T} \right),
 \end{equation}
-kus \(C\) on soojusmahtuvus, \(g\) on raskuskiirenuds, \(m\) on kera mass, \(T\) on kera temperatuur, \(Y\) on massikeskme kõrgus, \(\alpha\) on lineaarne soojuspaisumistegur.
+kus \(C\) on soojusmahtuvus, \(g\) on gravitatsioonivälja tugevus, \(m\) on kera mass, \(T\) on kera temperatuur, \(Y\) on massikeskme kõrgus, \(\alpha\) on lineaarne soojuspaisumistegur.
 
 
 \section{Kvaasi-klassikaline lähendus}
@@ -269,24 +272,29 @@ On võimalik leida ka kõrgemat järku energia parandid, kuid neid käesolevas t
 \chapter{Soojusmahtuvus erinevate potentsiaalide korral}
 
 \section{Mudeli kurjeldus}
-Kuna olümpiaadiülesandes oleva kera potentsiaal on väga keeriline, siis on vaja soojusmahtuvuse leidmiseks teha lihtsustusi.
+
+Kuna olümpiaadiülesandes oleva kera potentsiaal on väga keeruline, siis on vaja soojusmahtuvuse leidmiseks teha lihtsustusi.
 Kera vaatamise asemel vaadatakse süsteemi, kus mingid osakesed on fikseeritud ja on üks ühes dimensioonis vabalt liikuv osake.
 Osakestevahelise vastastikmõju tõttu sõltub süsteemi energia vabalt liikuva osakese asukohast.
 Sellist vastastikmõju saab kirjeldada Schrödingeri võrrandiga, kus potentsiaal sõltub osakeste paigutusest.
-Selline mudel vastab näiteks kaheaatomilise molekulile.
-Madalatel energiatel on selle potentsiaal ligikaudu sama harmoonilise ostsillaatori potentsiaalga.
+Selline mudel vastab näiteks kaheaatomilisele molekulile.
+Madalatel energiatel on selle potentsiaal ligikaudu sama harmoonilise ostsillaatori potentsiaaliga.
 Kuupparandi lisamine teeb potentsiaali veelgi täpsemaks.
 
 Järgnevalt vaadatakse süsteeme, kus osake liigub gravitatsiooniväljaga samas dimensioonis.
 Gravitatsiooniväli muudab lineaarselt ühe osakese energiat ja seega lisandub süsteemi potentsiaalile lineaarne potentsiaal.
 Kera jaoks oleks võimalik seda mudelit laiendada piirates osakeste asukoha kera sisse ja võttest potentsiaali ajas muutuvaks.
-Praktikas poleks aga kera jaoks sellist mudelit võimalik kasutada, kuna analüütiliselt on väga keeruline juba kahest osakesest koosnevat süseemi kirjalda.
+Praktikas poleks aga kera jaoks sellist mudelit võimalik kasutada, kuna analüütiliselt on väga keeruline juba kahest osakesest koosnevat süseemi kirjeldada.
 Samuti ei suuda tänapäevased arvutid simuleerida mõistliku aja piires hea täpsusega juba küllaltki väikse osakeste arvuga süsteeme.
 
+\section{Tükati lineaarne potentsiaal}
 
-
-\section{Tükiti lineaarne potentsiaal}
-Vaadeldakse potentsiaali kujuga
+Tükati lineaarne lineaarne potentsiaal koosneb eri lõikudel olevatest sirgetest.
+Üldisemalt on tegu lõplike elementide meetodiga (ingl \textit{finite element method }).
+Meetodi rakendamiseks jaotatakse süsteem ligikaudseteks osadeks (näiteks sirgeteks).
+See on kasulik, kuna lõpliku elemendi jaoks võib lahendi leidmine olla lihtne ja pannes elemendid kokku on võimalik saada on võimalik saada hea lähend kogu süsteemile.
+Tükati lineaarse potentsiaali võimalikuks puuduseks on selle tuletise mittepidavus, kui järgnevalt ei tohiks see midagi mõjutada.
+Vaadeldakse ühte lihtsaimat tükati lineaarset potentsiaali kujuga
 \begin{equation} \label{linpot}
     V(x)=\begin{cases}
         (-a+mg)x, & x<0,\\
@@ -338,11 +346,11 @@ Väärtuste arvutamiseks ja jooniste tegemiseks on kasutanud töö autor program
 Kasutatud käsklused on toodud välja lisas \hyperref[maximalisa]{1}.
 Joonistel on kõik väärtused SI ühikutes ja $N$ tähistab summeeritud liikmete arvu.
 
-Jooniselt \ref{joon1} on näha, et madalatel temperatuuridel on soojusmahtuvus väikse.
+Jooniselt \ref{joon1} on näha, et madalatel temperatuuridel on soojusmahtuvus väike.
 \marginpar{Kas (osa) jooniseid peaks olema lisades?}
 Gravitatsioonivälja muutus võib nii tõsta kui ka langetada soojusmahtuvust.
 Kuna potentsiaal \eqref{linpot} on mingi kindla $g$ väärtuse jaoks sümmeetriline nullpunkti suhtes, siis nii välja suurendamine kui ka vähendamine mõjutavad soojusmahtuvust samamoodi.
-Jooniselt \ref{joon1} on näha, et soojusmahtuvus on minimaalne teatud temperatuuril, kui potentsiaal \eqref{linpot} on sümmeetriline nullpunktisuhtes, ja kasvab, kui muuta gravitatsioonivälja.
+Jooniselt \ref{joon1} on näha, et soojusmahtuvus on minimaalne teatud temperatuuril, kui potentsiaal \eqref{linpot} on sümmeetriline nullpunkti suhtes, ja kasvab, kui muuta gravitatsioonivälja.
 
 \begin{figure}[htb!]
     \includegraphics[width=\textwidth]{maxima/m1a1b1T0_1S400_2.pdf}
@@ -373,18 +381,18 @@ ehk
 
 Joonised \ref{joon3} ja \ref{joon4} erinevad ainult summeeritud liikmete arvu poolest.
 On näha mõlemal joonisel, et madalatel temperatuuridel on soojusmahtuvus väike, tõustes mingi väärtuseni ja siis hakates sümmeetriateljest kaugemal vähenema.
-Kuna maksimaalne väärtus on mõlemal juhul ligikaudu sama avaldise \eqref{intmahtuvus} väärtusega, siis tõenäoliselt on tingitud sümmeetriateljest kaugemal vähenemine summeerimise ebatäpsusest ja tegelikult seda ei esine.
+Kuna maksimaalne väärtus on mõlemal juhul ligikaudu sama avaldise \eqref{intmahtuvus} väärtusega, siis tõenäoliselt on sümmeetriateljest kaugemal vähenemine tingitud summeerimise ebatäpsusest ja tegelikult seda ei esine.
 Seda väidet kinnitab ka täpsemal joonisel (joonis \ref{joon4}) väiksem soojusmahtuvuse vähenemine sümmeetriateljest kaugemal.
 
 \begin{figure}[htb!]
-    \includegraphics[width=0.6\textwidth]{maxima/m1a1b1T0_10S100.pdf}
+    \includegraphics[width=0.66\textwidth]{maxima/m1a1b1T0_10S100.pdf}
     \caption{Soojusmahtuvuse sõltuvus gravitatsiooniväljast ja temperatuurist tükiti lineaarse potentsiaal korral, kus $a=\SI{1}{N}$, $b=\SI{1}{N}$, $m=\SI{1}{kg}$ ja $N=100$.}
     \allikas{Autori erakogu.}
     \label{joon3}
 \end{figure}
 
 \begin{figure}[htb!]
-    \includegraphics[width=0.6\textwidth]{maxima/m1a1b1T0_10S400.pdf}
+    \includegraphics[width=0.66\textwidth]{maxima/m1a1b1T0_10S400.pdf}
     \caption{Soojusmahtuvuse sõltuvus gravitatsiooniväljast ja temperatuurist tükiti lineaarse potentsiaal korral, kus $a=\SI{1}{N}$, $b=\SI{1}{N}$, $m=\SI{1}{kg}$ ja $N=400$.}
     \allikas{Autori erakogu.}
     \label{joon4}
@@ -522,7 +530,7 @@ Analoogselt saab näidata, et
     A^\dagger \ket{n}=\sqrt{n+1}\ket{n+1}.
 \end{equation}
 
-\subsection{Häiritusega harmoolinine ostsillaator gravitatsiooniväljas}
+\subsection{Häiritusega harmooniline ostsillaator gravitatsiooniväljas}
 
 Nüüd vaadatakse harmoonilist ostsillaatorit, millele on lisatud kuuphäiritus, gravitatsiooniväljas. Sellele vastav hamiltoniaan on
 \begin{equation}
@@ -565,9 +573,9 @@ Selle eelduse kehtimisel on
 \begin{equation}
     Z=\frac{\exp\left( \beta \left(  \lambda (k_2^3+3k_2)\left(\frac{\hbar}{2m\omega}\right)^{\frac{3}{2}} +k_1 -\frac{1}{2}\right)\right)}{1-\exp \left( \beta\left( 6 k_2 \lambda \left( \frac{\hbar}{2m\omega}\right)^{\frac{3}{2}} - 1 \right)\right)}.
 \end{equation}
-Siit pole raske leida soojusmahtuvuse avaldist, kuid kuna see on küllaltki pikka ja otseselt sellest valemist pole võimalik järeldusi teha, siis ei hakata seda siin välja tooma.
+Siit pole raske leida soojusmahtuvuse avaldist, kuid kuna see on küllaltki pikk ja otseselt sellest valemist pole võimalik järeldusi teha, siis ei hakata seda siin välja tooma.
 
-Kasutades Maxima programmi üritas autor teha graafikuid soojusmahtuvuse sõltuvuse kohta temperatuuris ja gravitatsiooniväljast, kuid $\hbar$ ja $k_B$ tegelike väärtuste korral ei õnnestunud luua ühtegi graafikut.
+Kasutades Maxima programmi üritas autor teha graafikuid soojusmahtuvuse sõltuvuse kohta temperatuurist ja gravitatsiooniväljast, kuid $\hbar$ ja $k_B$ tegelike väärtuste korral ei õnnestunud luua ühtegi graafikut.
 See on tõenäoliselt tingitud sellest, et väärtused lähevad liiga väikseks programmi Maxima jaoks.
 Teatud väärtuste (vt joonis \ref{hjoon1} ja \ref{hjoon2}) jaoks õnnestus siiski luua soojusmahtuvuse ja soojusmahtuvuse tuletise gravitatsioonivälja järgi graafikud.
 Graafikute tegemisel on arvestatud, et eeldus \eqref{eeldus} kehtiks.
@@ -600,10 +608,11 @@ Kuna soojusmahtuvus muutub lubatud $g$ muutumispiirkonnas väga vähe, siis on j
 
 
 \addchap{Kokkuvõte}
+
 Töös leiti ligikaudsed soojusmahtuvuse avaldised kahe kvantmehaanilise süsteemi jaoks.
 Tükiti lineaarse potentsiaali jaoks gravitatsiooniväljas õnnestus leida, et väga kõrgetel temperatuuridel ei sõltu soojusmahtuvus gravitatsioonivälja tugevusest. Madalatel temperatuuridel leiti, et potentsiaali sümmeetrilisuse tõttu võib soojusmahtuvus nii tõusta kui ka langeda. Häiritusega harmoonilise ostsillaatori jaoks gravitatsiooniväljas ei leitud küll hästi analüüsitavat tulemust ja soojusmahtuvuse sõltuvus gravitatsioonist on kaheldav, kuid selle eest leiti täpne avaldis statistilise summa jaoks, millest pole raske jõuda soojusmahtuvuse avaldiseni.
 
-Hüpotees sai kinnitust, et on võimalik soojusmahtuvust nii suurendada kui ka vähendada.
+Kinnitust sai hüpotees, et on võimalik soojusmahtuvust nii suurendada kui ka vähendada.
 
 Tulemuste leidmine osutus ootamatult keeruliseks.
 On väga vähe potentsiaale, mille jaoks on Schrödingeri võrrand analüütiliselt lahenduv.
